// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssessmentReportAssessmentListTest render: fail 1`] = `
<div>
  <div
    className="assessment-details"
  >
    <h3
      className="assessment-header"
    >
      Assessment1
      <OutcomeChip
        count={2}
        outcomeType="fail"
      />
    </h3>
    <AssessmentReportStepList
      deps={
        {
          "outcomeTypeSemanticsFromTestStatus": {
            "stub": "outcomeTypeSemanticsFromTestStatus",
          },
        }
      }
      status={2}
      steps={
        [
          {
            "defaultMessageComponent": null,
            "header": {
              "description": null,
              "displayName": "Step2A",
              "guidanceLinks": [],
              "requirementType": "assisted",
            },
            "instances": [
              {
                "props": [
                  {
                    "key": "Path",
                    "value": "target1",
                  },
                  {
                    "key": "Snippet",
                    "value": "someHtml",
                  },
                ],
              },
            ],
            "key": "step2a",
            "showPassingInstances": false,
          },
          {
            "defaultMessageComponent": null,
            "header": {
              "description": null,
              "displayName": "Step4A",
              "guidanceLinks": [],
              "requirementType": "manual",
            },
            "instances": [
              {
                "props": [
                  {
                    "key": "Comment",
                    "value": "comment",
                  },
                ],
              },
            ],
            "key": "step4a",
            "showPassingInstances": false,
          },
        ]
      }
    />
  </div>
  <div
    className="assessment-details"
  >
    <h3
      className="assessment-header"
    >
      Assessment2
      <OutcomeChip
        count={1}
        outcomeType="fail"
      />
    </h3>
    <AssessmentReportStepList
      deps={
        {
          "outcomeTypeSemanticsFromTestStatus": {
            "stub": "outcomeTypeSemanticsFromTestStatus",
          },
        }
      }
      status={2}
      steps={
        [
          {
            "defaultMessageComponent": null,
            "header": {
              "description": null,
              "displayName": "Step2B",
              "guidanceLinks": [],
              "requirementType": "manual",
            },
            "instances": [],
            "key": "step2b",
            "showPassingInstances": true,
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`AssessmentReportAssessmentListTest render: incomplete 1`] = `
<div>
  <div
    className="assessment-details"
  >
    <h3
      className="assessment-header"
    >
      Assessment1
      <OutcomeChip
        count={1}
        outcomeType="incomplete"
      />
    </h3>
    <AssessmentReportStepList
      deps={
        {
          "outcomeTypeSemanticsFromTestStatus": {
            "stub": "outcomeTypeSemanticsFromTestStatus",
          },
        }
      }
      status={1}
      steps={
        [
          {
            "defaultMessageComponent": null,
            "header": {
              "description": null,
              "displayName": "Step3A",
              "guidanceLinks": [],
              "requirementType": "assisted",
            },
            "instances": [
              {
                "props": [
                  {
                    "key": "Path",
                    "value": "target2",
                  },
                  {
                    "key": "Snippet",
                    "value": "someHtml",
                  },
                ],
              },
            ],
            "key": "step3a",
            "showPassingInstances": false,
          },
        ]
      }
    />
  </div>
  <div
    className="assessment-details"
  >
    <h3
      className="assessment-header"
    >
      Assessment2
      <OutcomeChip
        count={1}
        outcomeType="incomplete"
      />
    </h3>
    <AssessmentReportStepList
      deps={
        {
          "outcomeTypeSemanticsFromTestStatus": {
            "stub": "outcomeTypeSemanticsFromTestStatus",
          },
        }
      }
      status={1}
      steps={
        [
          {
            "defaultMessageComponent": null,
            "header": {
              "description": null,
              "displayName": "Step1B",
              "guidanceLinks": [],
              "requirementType": "assisted",
            },
            "instances": [],
            "key": "step1b",
            "showPassingInstances": true,
          },
        ]
      }
    />
  </div>
</div>
`;

exports[`AssessmentReportAssessmentListTest render: pass 1`] = `
<div>
  <div
    className="assessment-details"
  >
    <h3
      className="assessment-header"
    >
      Assessment1
      <OutcomeChip
        count={1}
        outcomeType="pass"
      />
    </h3>
    <AssessmentReportStepList
      deps={
        {
          "outcomeTypeSemanticsFromTestStatus": {
            "stub": "outcomeTypeSemanticsFromTestStatus",
          },
        }
      }
      status={0}
      steps={
        [
          {
            "defaultMessageComponent": null,
            "header": {
              "description": null,
              "displayName": "Step1A",
              "guidanceLinks": [
                {
                  "href": "link1A",
                  "text": "link1A",
                },
              ],
              "requirementType": "assisted",
            },
            "instances": [
              {
                "props": [
                  {
                    "key": "Path",
                    "value": "target1",
                  },
                  {
                    "key": "Snippet",
                    "value": "someHtml",
                  },
                ],
              },
            ],
            "key": "step1a",
            "showPassingInstances": false,
          },
        ]
      }
    />
  </div>
</div>
`;
